# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_binary", "gml_cc_library")
load("//bazel:images.bzl", "gml_binary_image", "gml_oci_push")

package(default_visibility = [
    "//src:__subpackages__",
])

exports_files([
    "install.sh",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "gem.cc",
    ],
    deps = [
        "//src/gem/controller:cc_library",
        "//src/shared/version:cc_library",
        "@com_github_rlyeh_sole//:sole",
        "@com_google_absl//absl/log:initialize",
    ],
)

gml_cc_binary(
    name = "gem",
    linkopts = [
        # Ensure that our shared libs are picked up before LD_LIBRARY_PATH libs.
        "-Wl,--disable-new-dtags",
    ],
    deps = [
        ":cc_library",
        "//src/gem/static:cc_library",
        "//src/shared/version:cc_library",
        "//src/shared/version:version_linkstamp",
    ],
)

# TODO(james): once the openvino build works on aarch64, we can make this a multiarch image.
gml_binary_image(
    name = "gem_image",
    binary = ":gem",
    include_runfiles = True,
)

gml_oci_push(
    name = "push_gem_image",
    image = ":gem_image",
    repository = "us-docker.pkg.dev/gimlet-dev-0/gimlet-dev-docker-artifacts/gem_image",
)
