# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_pkg//pkg:mappings.bzl", "pkg_mkdirs")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "empty_tar",
    srcs = [],
    visibility = ["//visibility:public"],
)

pkg_mkdirs(
    name = "tmp_dir",
    dirs = ["tmp"],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "sysroot_type",
    build_setting_default = "debian12",
    values = [
        "debian12",
        "jetson",
    ],
)

config_setting(
    name = "sysroot_type_debian12",
    flag_values = {
        ":sysroot_type": "debian12",
    },
)

config_setting(
    name = "sysroot_type_jetson",
    flag_values = {
        ":sysroot_type": "jetson",
    },
)
