# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_pkg//pkg:mappings.bzl", "pkg_mkdirs")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "empty_tar",
    srcs = [],
    visibility = ["//visibility:public"],
)

pkg_mkdirs(
    name = "tmp_dir",
    dirs = ["tmp"],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "sysroot_type",
    build_setting_default = "debian12",
    values = [
        "debian12",
        "jetson",
        "intelgpu",
        "cuda",
    ],
)

config_setting(
    name = "sysroot_type_debian12",
    flag_values = {
        ":sysroot_type": "debian12",
    },
)

config_setting(
    name = "sysroot_type_jetson",
    flag_values = {
        ":sysroot_type": "jetson",
    },
)

config_setting(
    name = "sysroot_type_intelgpu",
    flag_values = {
        ":sysroot_type": "intelgpu",
    },
)

config_setting(
    name = "sysroot_type_cuda",
    flag_values = {
        ":sysroot_type": "cuda",
    },
)

# Some of the sysroots don't provide all variants (runtime, build, and test). For those sysroots, we default to the debian12 sysroot for that variant.
selects.config_setting_group(
    name = "use_debian12_runtime_sysroot",
    match_any = [
        ":sysroot_type_debian12",
    ],
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "use_debian12_build_sysroot",
    match_any = [
        ":sysroot_type_debian12",
        ":sysroot_type_intelgpu",
    ],
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "use_debian12_test_sysroot",
    match_any = [
        ":sysroot_type_debian12",
        ":sysroot_type_intelgpu",
    ],
    visibility = ["//visibility:public"],
)
