# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("@gml//bazel:gml_build_system.bzl", "gml_go_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apt_parse_lib",
    srcs = ["main.go"],
    importpath = "gimletlabs.ai/gimlet/bazel/tools/apt_parse",
    visibility = ["//visibility:private"],
    deps = [
        "//bazel/tools/apt_parse/bazelgen",
        "//bazel/tools/apt_parse/index",
        "//bazel/tools/apt_parse/resolve",
        "//bazel/tools/apt_parse/spec",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)

gml_go_binary(
    name = "apt_parse",
    embed = [":apt_parse_lib"],
    visibility = ["//visibility:public"],
)
