# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@gml//bazel:gml_build_system.bzl", "gml_go_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apt_parse_lib",
    srcs = ["main.go"],
    importpath = "gimletlabs.ai/gimlet/bazel/tools/apt_parse",
    visibility = ["//visibility:private"],
    deps = [
        "//bazel/tools/apt_parse/bazelgen",
        "//bazel/tools/apt_parse/index",
        "//bazel/tools/apt_parse/mirror",
        "//bazel/tools/apt_parse/resolve",
        "//bazel/tools/apt_parse/spec",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
    ],
)

gml_go_binary(
    name = "apt_parse",
    embed = [":apt_parse_lib"],
    visibility = ["//visibility:public"],
)
