# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@gml_api_pip//:requirements.bzl", "all_whl_requirements")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")
load("//bazel:gml_build_system.bzl", "no_sysroot")

# gazelle:python_root
# gazelle:python_default_visibility //:__subpackages__

exports_files(["requirements_lock.txt"])

compile_pip_requirements(
    name = "requirements",
    timeout = "long",
    src = "requirements.in",
    extra_args = [
        "--extra-index-url https://download.pytorch.org/whl/cu121",
    ],
    requirements_txt = "requirements_lock.txt",
    target_compatible_with = no_sysroot(),
)

modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "gml_api_pip",
    requirements = ":requirements_lock.txt",
    target_compatible_with = no_sysroot(),
)

py_wheel(
    name = "api_wheel",
    author = "Gimlet Labs, Inc.",
    author_email = "support@gimletlabs.ai",
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
        "Typing :: Typed",
    ],
    distribution = "gimlet-api",
    platform = "any",
    python_requires = ">=3",
    python_tag = "py3",
    requires_file = "requirements.in",
    strip_path_prefixes = ["src/api/python/"],
    version = "{STABLE_BUILD_TAG}",
    deps = [
        "//src/api/python/gml",
        "//src/api/python/gml:copy_protos",
    ],
)
