[project]
name = "gimlet-api"
dynamic = ["version", "dependencies"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.in"}

[tool.setuptools.package-dir]
"gml" = "gml"
"src.api.corepb" = "../../../src/api/corepb"
"gml.proto.src.api.corepb" = "../../../src/api/corepb"
"src.common.typespb" = "../../../src/common/typespb"
"gml.proto.src.common.typespb" = "../../../src/common/typespb"
"src.controlplane.compiler.cpb" = "../../../src/controlplane/compiler/cpb"
"gml.proto.src.controlplane.compiler.cpb" = "../../../src/controlplane/compiler/cpb"
"src.controlplane.directory.directorypb" = "../../../src/controlplane/directory/directorypb"
"gml.proto.src.controlplane.directory.directorypb" = "../../../src/controlplane/directory/directorypb"
"src.controlplane.filetransfer.ftpb" = "../../../src/controlplane/filetransfer/ftpb"
"gml.proto.src.controlplane.filetransfer.ftpb" = "../../../src/controlplane/filetransfer/ftpb"
"src.controlplane.logicalpipeline.lppb" = "../../../src/controlplane/logicalpipeline/lppb"
"gml.proto.src.controlplane.logicalpipeline.lppb" = "../../../src/controlplane/logicalpipeline/lppb"
"src.controlplane.model.mpb" = "../../../src/controlplane/model/mpb"
"gml.proto.src.controlplane.model.mpb" = "../../../src/controlplane/model/mpb"
"gogoproto" = "../../../third_party/github.com/gogo/protobuf/gogoproto"
"gml.proto.gogoproto" = "../../../third_party/github.com/gogo/protobuf/gogoproto"
"mediapipe" = "../../../third_party/github.com/google/mediapipe/mediapipe"
"gml.proto.mediapipe" = "../../../third_party/github.com/google/mediapipe/mediapipe"
"opentelemetry" = "../../../third_party/github.com/open-telemetry/opentelemetry-proto/opentelemetry"
"gml.proto.opentelemetry" = "../../../third_party/github.com/open-telemetry/opentelemetry-proto/opentelemetry"
