# Copyright 2018- The Pixie Authors.
# Modifications Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in comgmliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by apgmlicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or imgmlied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")

package(default_visibility = ["//src:__subpackages__"])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "api_impl.cc",
        "api_impl.h",
        "libuv.cc",
        "nats.cc",
        "real_time_system.cc",
    ],
    hdrs = [
        "api.h",
        "deferred_delete.h",
        "dispatcher.h",
        "event.h",
        "libuv.h",
        "nats.h",
        "real_time_system.h",
        "task.h",
        "time_system.h",
        "timer.h",
    ],
    deps = [
        "//bazel/external:libuv",
        "//bazel/external:natsc",
    ],
)

gml_cc_test(
    name = "libuv_dispatcher_test",
    srcs = ["libuv_dispatcher_test.cc"],
    tags = ["no_tsan"],
    deps = [":cc_library"],
)
