# Copyright 2018- The Pixie Authors.
# Modifications Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library_internal", "gml_cc_test")

package(default_visibility = ["//src:__subpackages__"])

gml_cc_library_internal(
    name = "cc_library",
    srcs = [
        "fs_utils.cc",
        "fs_wrapper.cc",
        "temp_dir.cc",
    ],
    hdrs = [
        "fs_utils.h",
        "fs_wrapper.h",
        "temp_dir.h",
        "temp_file.h",
    ],
    deps = [
        "//src/common/base:cc_library",
        "@com_github_okdshin_picosha//:picosha",
    ],
)

gml_cc_test(
    name = "fs_wrapper_test",
    srcs = ["fs_wrapper_test.cc"],
    deps = [":cc_library"],
)

gml_cc_test(
    name = "fs_utils_test",
    srcs = ["fs_utils_test.cc"],
    data = ["//src/common/fs/testdata"],
    deps = [
        ":cc_library",
        "//src/common/bazel:cc_library",
    ],
)

gml_cc_test(
    name = "temp_file_test",
    srcs = ["temp_file_test.cc"],
    deps = [":cc_library"],
)

gml_cc_test(
    name = "temp_dir_test",
    srcs = ["temp_dir_test.cc"],
    deps = [":cc_library"],
)
