# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@crates//:defs.bzl", "all_crate_deps")
load("@gml//bazel/rust:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@rules_rust//rust:defs.bzl", "rust_static_library")
load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")

package(default_visibility = [
    "//src:__subpackages__",
])

rust_static_library(
    name = "safetensors_wrapper_static_lib",
    srcs = ["src/lib.rs"],
    deps = all_crate_deps(normal = True),
)

rust_cxx_bridge(
    name = "safetensors_wrapper_bridge",
    src = "src/lib.rs",
    deps = [":safetensors_wrapper_static_lib"],
)

gml_cc_library(
    name = "cc_library",
    srcs = ["safetensors.cc"],
    hdrs = ["safetensors.h"],
    deps = [
        ":safetensors_wrapper_bridge",
        "//src/common/system:cc_library",
    ],
)

gml_cc_test(
    name = "safetensors_test",
    srcs = ["safetensors_test.cc"],
    data = ["testdata/test.safetensors"],
    deps = [
        ":cc_library",
        "//src/common/bazel:cc_library",
    ],
)
