# Copyright 2018- The Pixie Authors.
# Modifications Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")

package(default_visibility = ["//src:__subpackages__"])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "config.cc",
        "config.h",
        "linux_file_wrapper.cc",
        "linux_file_wrapper.h",
        "mac_address.cc",
        "mac_address.h",
        "memory_mapped_file.cc",
        "memory_mapped_file.h",
        "parsers.cc",
        "parsers.h",
        "proc_parser.cc",
        "proc_parser.h",
        "proc_pid_path.cc",
        "proc_pid_path.h",
    ],
    hdrs = ["system.h"],
    deps = [
        "//src/common/fs:cc_library",
    ],
)

gml_cc_test(
    name = "proc_parser_test",
    srcs = ["proc_parser_test.cc"],
    data = ["//src/common/system/testdata:proc_fs"],
    deps = [
        ":cc_library",
    ],
)

gml_cc_test(
    name = "linux_file_wrapper_test",
    srcs = ["linux_file_wrapper_test.cc"],
    deps = [
        ":cc_library",
    ],
)

# This test only works properly on the host machine (not inside containers), so test is marked manual.
gml_cc_test(
    name = "mac_address_test",
    srcs = ["mac_address_test.cc"],
    tags = ["manual"],
    deps = [
        ":cc_library",
    ],
)

gml_cc_test(
    name = "memory_mapped_file_test",
    srcs = ["memory_mapped_file_test.cc"],
    data = ["//src/common/system/testdata:nonutf8file"],
    deps = [
        ":cc_library",
    ],
)
