# Copyright 2018- The Pixie Authors.
# Modifications Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_library", "gml_cc_test")

package(default_visibility = [
    "//src:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "line_diff.cc",
        "line_diff.h",
        "matchers.h",
        "protobuf.h",
        "status.h",
        "temp_dir.h",
        "test_environment.h",
    ],
    hdrs = ["testing.h"],
    deps = [
        "//src/common/bazel:cc_library",
        "//src/common/fs:cc_library",
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_googletest//:gtest",
    ],
)

gml_cc_library(
    name = "test_main",
    srcs = ["test_main.cc"],
    deps = [
        ":cc_library",
        "//src/common/signal:cc_library",
        "@com_google_googletest//:gtest",
    ],
)

gml_cc_test(
    name = "line_diff_test",
    srcs = ["line_diff_test.cc"],
)
