# Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "typespb_proto",
    srcs = [
        "jwt.proto",
        "status.proto",
        "uuid.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/github.com/gogo/protobuf/gogoproto:gogoproto_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

proto_cc_library(
    name = "typespb_cc_library",
    srcs = [
        "jwt.pb.cc",
        "status.pb.cc",
        "uuid.pb.cc",
    ],
    hdrs = [
        "jwt.pb.h",
        "status.pb.h",
        "uuid.pb.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/github.com/gogo/protobuf/gogoproto:gogoproto_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "typespb_cpp_compile",
    outputs = [
        "status.pb.cc",
        "status.pb.h",
        "uuid.pb.cc",
        "uuid.pb.h",
        "jwt.pb.cc",
        "jwt.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "typespb_proto",
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "typespb_go_compile",
    output_mappings = [
        "status.pb.go=gimletlabs.ai/gimlet/src/common/typespb/status.pb.go",
        "uuid.pb.go=gimletlabs.ai/gimlet/src/common/typespb/uuid.pb.go",
        "jwt.pb.go=gimletlabs.ai/gimlet/src/common/typespb/jwt.pb.go",
    ],
    outputs = [
        "status.pb.go",
        "uuid.pb.go",
        "jwt.pb.go",
    ],
    plugins = ["@build_stack_rules_proto//plugin/gogo/protobuf:protoc-gen-gogoslick"],
    proto = "typespb_proto",
    visibility = ["//visibility:public"],
)

proto_go_library(
    name = "typespb_go_proto",
    srcs = [
        "jwt.pb.go",
        "status.pb.go",
        "uuid.pb.go",
    ],
    importpath = "gimletlabs.ai/gimlet/src/common/typespb",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/github.com/gogo/protobuf/gogoproto:gogoproto_go_proto",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor",
        "@com_github_gogo_protobuf//sortkeys",
        "@com_github_gogo_protobuf//types",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

proto_compile(
    name = "typespb_py_compile",
    outputs = [
        "jwt_pb2.py",
        "status_pb2.py",
        "uuid_pb2.py",
        "jwt_pb2.pyi",
        "status_pb2.pyi",
        "uuid_pb2.pyi",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/builtin:python",
        "@build_stack_rules_proto//plugin/builtin:pyi",
    ],
    proto = "typespb_proto",
    visibility = ["//visibility:public"],
)

proto_py_library(
    name = "typespb_py_library",
    srcs = [
        "jwt_pb2.py",
        "status_pb2.py",
        "uuid_pb2.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/github.com/gogo/protobuf/gogoproto:gogoproto_py_library",
        "@pip//protobuf",
    ],
)
