# Copyright 2018- The Pixie Authors.
# Modifications Copyright 2023- Gimlet Labs, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("//bazel:gml_build_system.bzl", "gml_cc_binary", "gml_cc_library", "gml_cc_test")

package(default_visibility = ["//src:__subpackages__"])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "uuid_utils.h",
    ],
    hdrs = ["uuid.h"],
    deps = [
        "@com_github_rlyeh_sole//:sole",
    ],
)

gml_cc_test(
    name = "uuid_utils_test",
    srcs = ["uuid_utils_test.cc"],
    deps = [
        ":cc_library",
        "//src/common/typespb:typespb_cc_library",
    ],
)

gml_cc_binary(
    name = "uuid_benchmark",
    testonly = 1,
    srcs = ["uuid_benchmark.cc"],
    deps = [
        ":cc_library",
        "//src/common/benchmark:benchmark_main",
        "@com_github_rlyeh_sole//:sole",
    ],
)
