# Copyright © 2023- Gimlet Labs, Inc.
# All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains
# the property of Gimlet Labs, Inc. and its suppliers,
# if any.  The intellectual and technical concepts contained
# herein are proprietary to Gimlet Labs, Inc. and its suppliers and
# may be covered by U.S. and Foreign Patents, patents in process,
# and are protected by trade secret or copyright law. Dissemination
# of this information or reproduction of this material is strictly
# forbidden unless prior written permission is obtained from
# Gimlet Labs, Inc.
#
# SPDX-License-Identifier: Proprietary

load("//bazel:gml_build_system.bzl", "gml_cc_library")

package(default_visibility = [
    "//src:__subpackages__",
])

gml_cc_library(
    name = "cc_library",
    srcs = [
        "grpc_bridge.cc",
        "heartbeat.cc",
    ],
    hdrs = [
        "gem_info.h",
        "grpc_bridge.h",
        "heartbeat.h",
        "message_handler.h",
    ],
    deps = [
        "//src/api/corepb/v1:corepb_cc_library",
        "//src/common/event:cc_library",
        "//src/common/signal:cc_library",
        "//src/common/system:cc_library",
        "//src/common/uuid:cc_library",
        "//src/controlplane/egw/egwpb/v1:egwpb_cc_library",
        "//src/controlplane/egw/egwpb/v1:egwpb_grpc_cc_library",
        "//src/controlplane/fleetmgr/fmpb/v1:fmpb_cc_library",
        "//src/controlplane/fleetmgr/fmpb/v1:fmpb_grpc_cc_library",
        "@com_github_rlyeh_sole//:sole",
        "@com_intel_tbb//:tbb",
    ],
)
